make v1.5.0 document the deafult document

--- a/website/_includes/header.cn.html
+++ b/website/_includes/header.cn.html
@@ -40,7 +40,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
      <li><a href="/cn">首页</a></li>
-          <li><a href="/cn/docs" >文档</a></li>
+          <li><a href="/cn/docs15" >文档</a></li>
           <li><a href="/cn/download">下载</li>
           <li><a href="/community" >社区</a></li>
           <li><a href="/development" >开发</a></li>
