--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -45,7 +45,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
      <li><a href="/">Home</a></li>
-          <li><a href="/docs" >Docs</a></li>
+          <li><a href="/docs15" >Docs</a></li>
           <li><a href="/download">Download</li>
           <li><a href="/community" >Community</a></li>
           <li><a href="/development" >Development</a></li>
