--- a/webapp/app/partials/cubeDesigner/advanced_settings.html
+++ b/webapp/app/partials/cubeDesigner/advanced_settings.html
@@ -50,10 +50,10 @@
                       on-select="refreshAggregationGroup(cubeMetaFrame.aggregation_groups, rowIndex, aggregation_group)"
                       on-remove="refreshAggregationGroup(cubeMetaFrame.aggregation_groups, rowIndex, aggregation_group)"
                       ng-if="state.mode=='edit'" style="width: 100%" multiple ng-model="aggregation_group.includes">
-                     <ui-select-match placeholder="Select Column...">{{$item.column}}</ui-select-match>
+                      <ui-select-match placeholder="Select Column...">{{$item.column}}</ui-select-match>
                       <ui-select-choices
-                      repeat="rowkey_column.column as rowkey_column in cubeMetaFrame.rowkey.rowkey_columns | filter:$select.search">
-                    {{rowkey_column.column}}
+                        repeat="rowkey_column.column as rowkey_column in cubeMetaFrame.rowkey.rowkey_columns | filter:$select.search">
+                        {{rowkey_column.column}}
                       </ui-select-choices>
                     </ui-select>
 
@@ -68,14 +68,6 @@
                     Mandatory Dimensions
                   </td>
                   <td class="col-xs-8">
-                    <!-- Dimensions -->
-                    <!--<select ng-if="state.mode=='edit'" style="width: 100%"-->
-                            <!--ng-model="aggregation_group.select_rule.mandatory_dims" chosen multiple-->
-                            <!--ng-change="refreshAggregationGroup(cubeMetaFrame.aggregation_groups, rowIndex, aggregation_group)"-->
-                            <!--ng-options="column as column for column in aggregation_group.includes">-->
-                      <!--<option value=""></option>-->
-                    <!--</select>-->
-
                     <ui-select
                       close-on-select="false"
                       autofocus="true"
@@ -105,14 +97,6 @@
                     <table class="table">
                       <tr class="row" ng-repeat="hierarchyDims in aggregation_group.select_rule.hierarchy_dims track by $index">
                         <td class="col-xs-10">
-                          <!-- Dimensions -->
-                          <!--<select ng-if="state.mode=='edit'" style="width: 100%"-->
-                                  <!--ng-model="hierarchyDims" chosen multiple-->
-                                  <!--ng-change="refreshAggregationHierarchy(cubeMetaFrame.aggregation_groups, rowIndex, aggregation_group,$index,hierarchyDims)"-->
-                                  <!--ng-options="column as column for column in aggregation_group.includes">-->
-                            <!--<option value=""></option>-->
-                          <!--</select>-->
-
                           <ui-select
                             close-on-select="false"
                             autofocus="true"
@@ -218,13 +202,13 @@
         <table style="margin-left:42px; width:92%"
                ng-if="cubeMetaFrame.rowkey.rowkey_columns.length > 0"
                class="table table-hover table-bordered list"
-          >
+        >
           <thead>
           <tr>
             <th>ID</th>
             <th style="width:200px;">Column</th>
-            <th>Dictionary</th>
-            <th>Fixed Length</th>
+            <th>Encoding</th>
+            <th>Length</th>
             <th ng-if="state.mode=='edit'"></th>
           </tr>
           </thead>
@@ -248,24 +232,25 @@
               <span ng-if="state.mode=='view'">{{rowkey_column.column}}</span>
             </td>
             <td>
-              <select ng-if="state.mode=='edit'" style="width:80px;"
-                      chosen ng-model="rowkey_column.isDictionary"
+              <select ng-if="state.mode=='edit'" style="width:180px;"
+                      chosen ng-model="rowkey_column.encoding"
                       ng-change="refreshRowKey(convertedRowkeys,$index,rowkey_column);"
-                      ng-options="dt as dt for dt in cubeConfig.dictionaries">
+                      ng-options="dt as dt for dt in store.supportedEncoding">
                 <option value=""></option>
               </select>
-              <span ng-if="state.mode=='view'">{{rowkey_column.isDictionary}}</span>
+              <span ng-if="state.mode=='view'">{{rowkey_column.encoding}}</span>
 
             </td>
             <td>
               <!--Column Length -->
               <input type="text" class="form-control" placeholder="Column Length.." ng-if="state.mode=='edit'"
                      tooltip="rowkey column length.." tooltip-trigger="focus"
-                     ng-disabled="rowkey_column.isDictionary=='true'"
+                     ng-disabled="rowkey_column.encoding=='dict'"
                      ng-change="refreshRowKey(convertedRowkeys,$index,rowkey_column);"
-                     ng-model="rowkey_column.fixedLength" class="form-control">
+                     ng-model="rowkey_column.valueLength" class="form-control">
 
-              <span ng-if="state.mode=='view'">{{rowkey_column.fixedLength}}</span>
+              <small class="help-block red" ng-show="state.mode=='edit' && rowkey_column.encoding=='int' && (rowkey_column.valueLength>8 || rowkey_column.valueLength<1)">int encoding column length should between 1 and 8</small>
+              <span ng-if="state.mode=='view'">{{rowkey_column.valueLength}}</span>
             </td>
 
             <td ng-if="state.mode=='edit'">
