--- a/webapp/app/partials/cubeDesigner/refresh_settings.html
+++ b/webapp/app/partials/cubeDesigner/refresh_settings.html
@@ -123,9 +123,19 @@
                   <div class="col-xs-12 col-sm-6"
                        ng-class="metaModel.model.partition_desc.partition_date_column!=null&& cubeMetaFrame.partition_date_start==null?'has-error':''">
                     <!--edit model will convert &ndash;&gt;-->
-                    <input type="text" class="form-control" datepicker-popup="yyyy-MM-dd" datepicker-timezone
-                           ng-model="cubeMetaFrame.partition_date_start" ng-if="state.mode=='edit'"
-                           placeholder="Click to choose start date..." is-open="opened"/>
+                    <!--<input type="text" class="form-control" datepicker-popup="yyyy-MM-dd" datepicker-timezone-->
+                           <!--ng-model="cubeMetaFrame.partition_date_start" ng-if="state.mode=='edit'"-->
+                           <!--placeholder="Click to choose start date..." is-open="opened"/>-->
+                    <div ng-if="state.mode=='edit'" class="dropdown">
+                      <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" href="#">
+                        <div class="input-group"><input type="text" class="form-control" date-timepicker-timezone data-ng-model="cubeMetaFrame.partition_date_start"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div>
+                      </a>
+                      <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                        <datetimepicker  data-ng-model="cubeMetaFrame.partition_date_start" data-datetimepicker-config="{ dropdownSelector: '#dropdown2' }"/>
+                      </ul>
+                    </div>
+
                     <small class="help-block"
                            ng-show="metaModel.model.partition_desc.partition_date_column!=null&& cubeMetaFrame.partition_date_start==null">
                       Please input start date when partition date column is defined in model.
