minor, refine error message of reresh a cube without partition col

--- a/webapp/app/partials/jobs/job_refresh.html
+++ b/webapp/app/partials/jobs/job_refresh.html
@@ -84,7 +84,7 @@
         <div ng-if="!metaModel.model.partition_desc.partition_date_column" class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <span>No partition date column defined.</span>
+                <span>No partition date column defined. If you want to rebuild the cube, please click "Build".</span>
             </div>
             <div class="col-md-2"></div>
         </div>
