--- a/webapp/app/partials/admin/admin.html
+++ b/webapp/app/partials/admin/admin.html
@@ -17,157 +17,169 @@
 -->
 
 <div class="container" style="padding-top: 80px">
-    <div class="col-md-5">
-        <div>
-            <h3>Server Config <button class="btn btn-xs btn-success" ng-click="getConfig()"><i class="fa fa-refresh"></i></button></h3>
-        </div>
-        <div style="padding-top: 10px">
-            <pre>{{configStr}}</pre>
-        </div>
+  <div class="col-md-5">
+    <div>
+      <h3>Server Config <button class="btn btn-xs btn-success" ng-click="getConfig()"><i class="fa fa-refresh"></i></button></h3>
+    </div>
+    <div style="padding-top: 10px">
+      <pre>{{configStr}}</pre>
+    </div>
+  </div>
+
+  <div class="col-md-5">
+    <div>
+      <h3>Server Environment <button class="btn btn-xs btn-success" ng-click="getEnv()"><i class="fa fa-refresh"></i></button></h3>
+    </div>
+    <div style="padding-top: 10px">
+      <pre>{{envStr}}</pre>
+    </div>
+  </div>
+
+  <div class="col-md-2">
+    <div>
+      <h3>Actions</h3>
+    </div>
+    <div style="padding-top: 10px;width: 260px;">
+      <!--<button class="btn btn-primary btn-lg btn-block" ng-click="reloadMeta()">-->
+      <!--<label tooltip="Reload all metadata and clean cache" style="cursor: pointer;">Reload Metadata</label>-->
+      <!--</button>-->
+      <a  class="btn btn-primary btn-lg btn-block" tooltip="Reload all metadata and clean cache" ng-click="reloadMeta()">Reload Metadata</a>
+    </div>
+    <div style="padding-top: 10px;width: 260px;">
+      <a ng-click="calCardinality();" tooltip="Calculate cardinality of tables" class="btn btn-primary btn-lg btn-block">Calculate Cardinality</a>
+
+      <!--<button class="btn btn-primary btn-lg btn-block" ng-click="calCardinality()">-->
+      <!--<label tooltip="Calculate cardinality of tables" style="cursor: pointer;">Calculate Cardinality</label>-->
+
+      <!--</button>-->
+    </div>
+    <div style="padding-top: 10px;width: 260px;" ng-if="false">
+      <!--<button class="btn btn-success btn-lg btn-block" ng-click="cleanStorage()">-->
+      <!--<label tooltip="Clean unused HDFS and HBASE space" style="cursor: pointer;">Clean Up Storage</label>-->
+      <!--</button>-->
+      <a class="btn btn-success btn-lg btn-block" tooltip="Clean unused HDFS and HBASE space" ng-click="cleanStorage()">Clean Up Storage</a>
+    </div>
+    <div style="padding-top: 10px;width: 260px;" ng-if="isCacheEnabled()">
+      <!--<button class="btn btn-primary btn-lg btn-block" ng-click="disableCache()">-->
+      <!--<label tooltip="Disable Query Cache" style="cursor: pointer;">Disable Cache</label>-->
+      <!--</button>-->
+      <a class="btn btn-primary btn-lg btn-block" ng-click="disableCache()">Disable Cache</a>
+    </div>
+    <div style="padding-top: 10px;width: 260px;" ng-if="!isCacheEnabled()">
+      <!--<button class="btn btn-primary btn-lg btn-block" ng-click="enableCache()">-->
+      <!--<label tooltip="Enable Query Cache" style="cursor: pointer;">Enable Cache</label>-->
+      <!--</button>-->
+      <a  class="btn btn-primary btn-lg btn-block" tooltip="Enable Query Cache" ng-click="enableCache()">Enable Cache</a>
+    </div>
+    <div style="padding-top: 10px;width: 260px;">
+      <!--<button class="btn btn-primary btn-lg btn-block" ng-click="toSetConfig()">-->
+      <!--<label tooltip="Update Server Config" style="cursor: pointer;">Set Config</label>-->
+      <!--</button>-->
+      <a class="btn btn-primary btn-lg btn-block" tooltip="Update Server Config"  class="btn btn-primary btn-lg"  ng-click="toSetConfig()">Set Config</a>
+    </div>
+    <div style="padding-top: 10px;width: 260px;">
+      <a ng-click="downloadBadQueryFiles();" tooltip="Download selected project Diagnosis Info" class="btn btn-primary btn-lg btn-block"><i class="fa fa-ambulance"></i> Diagnosis</a>
     </div>
 
-    <div class="col-md-5">
-        <div>
-            <h3>Server Environment <button class="btn btn-xs btn-success" ng-click="getEnv()"><i class="fa fa-refresh"></i></button></h3>
-        </div>
-        <div style="padding-top: 10px">
-            <pre>{{envStr}}</pre>
-        </div>
+    <div>
+      <h3>Links</h3>
     </div>
-
-    <div class="col-md-2">
-        <div>
-            <h3>Actions</h3>
-        </div>
-        <div style="padding-top: 10px;width: 180px;">
-            <button class="btn btn-primary btn-lg btn-block" ng-click="reloadMeta()">
-                <label tooltip="Reload all metadata and clean cache" style="cursor: pointer;">Reload Metadata</label>
-            </button>
-        </div>
-        <div style="padding-top: 10px;width: 180px;">
-            <button class="btn btn-primary btn-lg btn-block" ng-click="calCardinality()">
-                <label tooltip="Calculate cardinality of tables" style="cursor: pointer;">Calculate Cardinality</label>
-            </button>
-        </div>
-        <div style="padding-top: 10px;width: 180px;" ng-if="false">
-            <button class="btn btn-success btn-lg btn-block" ng-click="cleanStorage()">
-                <label tooltip="Clean unused HDFS and HBASE space" style="cursor: pointer;">Clean Up Storage</label>
-            </button>
-        </div>
-        <div style="padding-top: 10px;width: 180px;" ng-if="isCacheEnabled()">
-            <button class="btn btn-primary btn-lg btn-block" ng-click="disableCache()">
-                <label tooltip="Disable Query Cache" style="cursor: pointer;">Disable Cache</label>
-            </button>
-        </div>
-      <div style="padding-top: 10px;width: 180px;" ng-if="!isCacheEnabled()">
-        <button class="btn btn-primary btn-lg btn-block" ng-click="enableCache()">
-          <label tooltip="Enable Query Cache" style="cursor: pointer;">Enable Cache</label>
-        </button>
-      </div>
-      <div style="padding-top: 10px;width: 180px;">
-            <button class="btn btn-primary btn-lg btn-block" ng-click="toSetConfig()">
-                <label tooltip="Update Server Config" style="cursor: pointer;">Set Config</label>
-            </button>
-        </div>
-        <div>
-            <h3>Links</h3>
-        </div>
-        <div style="padding-top: 10px" ng-if="config.reference_links['hadoop']">
-            <a class="label-lg label-yellow arrowed-right"style="font-size:18px;" tooltip="Cluster Resource Monitoring" href="{{config.reference_links['hadoop'].link}}" >
-                Hadoop Monitor
-            </a>
-        </div>
+    <div style="padding-top: 10px" ng-if="config.reference_links['hadoop']">
+      <a class="label-lg label-yellow arrowed-right"style="font-size:18px;" tooltip="Cluster Resource Monitoring" href="{{config.reference_links['hadoop'].link}}" >
+        Hadoop Monitor
+      </a>
     </div>
+  </div>
 </div>
 
 <script type="text/ng-template" id="calCardinality.html">
-    <div class="modal-header">
-        <h4>Load Hive Table Metadata</h4>
-    </div>
-    <div class="modal-body load-hive-metawrapper">
-        <label for="table">Table Name:</label>
-        <input ng-model="$parent.tableName" class="form-control" id="table" placeholder="table1,table2"/>
-        <label>Delimiter:</label>
+  <div class="modal-header">
+    <h4>Load Hive Table Metadata</h4>
+  </div>
+  <div class="modal-body load-hive-metawrapper">
+    <label for="table">Table Name:</label>
+    <input ng-model="$parent.tableName" class="form-control" id="table" placeholder="table1,table2"/>
+    <label>Delimiter:</label>
 
-        <div class="radio">
-            <label>
-                <input type="radio" name="deliRadios" data-ng-model="$parent.delimiter" ng-value="0">default
-                -- System will try to get the format from hive metadata, if you are not sure, please choose the
-                "default".
-            </label>
-        </div>
-        <div class="radio">
-            <label>
-                <input type="radio" name="deliRadios" data-ng-model="$parent.delimiter" ng-value="1">\177
-            </label>
-        </div>
-        <div class="radio">
-            <label>
-                <input type="radio" name="deliRadios" data-ng-model="$parent.delimiter" ng-value="2">tab
-            </label>
-        </div>
-        <label>Format:</label>
+    <div class="radio">
+      <label>
+        <input type="radio" name="deliRadios" data-ng-model="$parent.delimiter" ng-value="0">default
+        -- System will try to get the format from hive metadata, if you are not sure, please choose the
+        "default".
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="deliRadios" data-ng-model="$parent.delimiter" ng-value="1">\177
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="deliRadios" data-ng-model="$parent.delimiter" ng-value="2">tab
+      </label>
+    </div>
+    <label>Format:</label>
 
-        <div class="radio">
-            <label>
-                <input type="radio" name="formatRadios" data-ng-model="$parent.format" ng-value="0">default
-                -- System will try to get the format from hive metadata, if you are not sure, please choose the
-                "default".
-            </label>
-        </div>
-        <div class="radio">
-            <label>
-                <input type="radio" name="formatRadios" data-ng-model="$parent.format" ng-value="1">text
-            </label>
-        </div>
-        <div class="radio">
-            <label>
-                <input type="radio" name="formatRadios" data-ng-model="$parent.format" ng-value="2">sequence
-            </label>
-        </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="formatRadios" data-ng-model="$parent.format" ng-value="0">default
+        -- System will try to get the format from hive metadata, if you are not sure, please choose the
+        "default".
+      </label>
     </div>
-    <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="calculate()">Sync</button>
-        <button class="btn btn-primary" ng-click="cancel()">Cancel</button>
+    <div class="radio">
+      <label>
+        <input type="radio" name="formatRadios" data-ng-model="$parent.format" ng-value="1">text
+      </label>
     </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="formatRadios" data-ng-model="$parent.format" ng-value="2">sequence
+      </label>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-primary" ng-click="calculate()">Sync</button>
+    <button class="btn btn-primary" ng-click="cancel()">Cancel</button>
+  </div>
 </script>
 
 <script type="text/ng-template" id="updateConfig.html">
-    <ng-form name="config_update_form">
-        <div class="modal-header">
-            <h4>Update Config</h4>
+  <ng-form name="config_update_form">
+    <div class="modal-header">
+      <h4>Update Config</h4>
+    </div>
+    <div class="modal-body">
+      <div class="form-group">
+        <label><b>Key</b></label>
+
+        <div class="clearfix">
+          <input name="key_input" type="text" class="form-control" placeholder="Config Key.."
+                 ng-model="state.key"
+                 required/>
+
+          <p class="text-warning"
+             ng-show="config_update_form.key_input.$invalid && !config_update_form.key_input.$pristine">&nbsp;&nbsp;Key
+            is required.</p>
         </div>
-        <div class="modal-body">
-            <div class="form-group">
-                <label><b>Key</b></label>
+      </div>
+      <div class="form-group">
+        <label><b>Value</b></label>
 
-                <div class="clearfix">
-                    <input name="key_input" type="text" class="form-control" placeholder="Config Key.."
-                           ng-model="state.key"
-                           required/>
+        <div class="clearfix">
+          <input name="value_input" type="text" class="form-control" placeholder="Config Value.."
+                 ng-model="state.value"
+                 required/>
 
-                    <p class="text-warning"
-                       ng-show="config_update_form.key_input.$invalid && !config_update_form.key_input.$pristine">&nbsp;&nbsp;Key
-                        is required.</p>
-                </div>
-            </div>
-            <div class="form-group">
-                <label><b>Value</b></label>
-
-                <div class="clearfix">
-                    <input name="value_input" type="text" class="form-control" placeholder="Config Value.."
-                           ng-model="state.value"
-                           required/>
-
-                    <p class="text-warning"
-                       ng-show="config_update_form.value_input.$invalid && !config_update_form.value_input.$pristine">&nbsp;&nbsp;Value
-                        is required.</p>
-                </div>
-            </div>
+          <p class="text-warning"
+             ng-show="config_update_form.value_input.$invalid && !config_update_form.value_input.$pristine">&nbsp;&nbsp;Value
+            is required.</p>
         </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" ng-click="update()">Update</button>
-            <button class="btn btn-primary" ng-click="cancel()">Cancel</button>
-        </div>
-    </ng-form>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-primary" ng-click="update()">Update</button>
+      <button class="btn btn-primary" ng-click="cancel()">Cancel</button>
+    </div>
+  </ng-form>
 </script>
