minor, fix some typo and style issues

--- a/webapp/app/partials/cubes/cube_detail.html
+++ b/webapp/app/partials/cubes/cube_detail.html
@@ -81,7 +81,7 @@
     <div class="cube-detail" ng-show="cube.visiblePage=='notification'">
         <div style="margin: 15px;">
             <form>
-                <h5>Notification List(Common Separated)</h5>
+                <h5>Notification List(Comma Separated)</h5>
                 <div class="form-group">
                     <input ng-model="cube.notifyListString" class="form-control" placeholder="Notification List..." />
                 </div>
