--- a/webapp/app/partials/tables/table_unload.html
+++ b/webapp/app/partials/tables/table_unload.html
@@ -18,7 +18,7 @@
 
   <script type="text/ng-template" id="removeHiveTable.html">
     <div class="modal-header">
-      <h4>UnLoad Hive Table Metadata</h4>
+      <h4>Unload Hive Table Metadata</h4>
     </div>
     <div class="modal-body">
       <span><strong>Project: </strong>{{ $parent.projectName!=null?$parent.projectName:'NULL'}}</span>
@@ -27,7 +27,7 @@
                       placeholder="table1,table2  By default,system will choose 'Default' as database,you can specify database like this 'database.table'"></textarea>
     </div>
     <div class="modal-footer">
-      <button class="btn btn-primary" ng-click="remove()">Sync</button>
+      <button class="btn btn-primary" ng-click="remove()">Unload</button>
       <button class="btn btn-primary" ng-click="cancel()">Cancel</button>
     </div>
   </script>
