KYLIN-1487 attach a hyperlink to introduce new aggregation group update

--- a/webapp/app/partials/cubeDesigner/advanced_settings.html
+++ b/webapp/app/partials/cubeDesigner/advanced_settings.html
@@ -18,7 +18,6 @@
 
 <div ng-controller="CubeAdvanceSettingCtrl">
 
-  <div>
     <ng-form name="forms.cube_setting_form">
       <div>
 
@@ -304,18 +303,13 @@
 
       </div>
 
-      <div class="box box-solid">
+      <div class="box box-solid" style="margin-left:22px;">
         <div class="box-body">
-          <div class="row">
             <div class="col-xs-12">
-              <ul>
-                <li>Visit <a href="http://kylin.apache.org/blog/2016/02/18/new-aggregation-group" target="_blank">aggregation group</a> for more about aggregation group.</li>
-              </ul>
+                Visit <a href="http://kylin.apache.org/blog/2016/02/18/new-aggregation-group" target="_blank">aggregation group</a> for more about aggregation group.
             </div>
-          </div>
         </div>
       </div>
     </ng-form>
-  </div>
 
 </div>
