fix the problem of don't update total number when search cube name in cubes page.
Signed-off-by: Jason <jiatuer@163.com>

--- a/webapp/app/partials/cubes/cubes.html
+++ b/webapp/app/partials/cubes/cubes.html
@@ -39,10 +39,10 @@
     </div>
     <!--Cube Name-->
     <div class="col-xs-3">
-        <form ng-submit="cubeList.removeAll();list()" style="display: inline" >
+        <form ng-submit="cubeList.removeAll();reload()" style="display: inline" >
             <span class="input-icon input-icon-right nav-search"><b>Cube Name:</b>
                 <input type="text" placeholder="Filter ..." class="nav-search-input" ng-model="listParams.cubeName" />
-                <i class="ace-icon fa fa-search blue" ng-click="cubeList.removeAll();list()"></i>
+                <i class="ace-icon fa fa-search blue" ng-click="cubeList.removeAll();reload()"></i>
             </span>
         </form>
     </div>
